--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,8 @@
     "titleBar.inactiveBackground": "#68217a99",
     "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#68217A"
+  "peacock.color": "#68217A",
+  "cSpell.ignoreWords": [
+    "conforta"
+  ]
 }
