--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@xstate/react": "^0.8.1",
     "bootstrap": "^4.5.0",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
@@ -16,7 +17,8 @@
     "react-player": "^2.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "xstate": "^4.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
